{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 140,
  "lineage": "8bef95f8-00b7-15c8-90eb-af0a7149bebb",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "ktf-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/publicIPAddresses/ktf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.234.12",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ktf-ip",
            "resource_group_name": "ktf-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ktf-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/networkInterfaces/ktf-nic",
            "internal_domain_name_suffix": "kdvfttmfj35e5c4rjqr4qrf2hg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/publicIPAddresses/ktf-ip",
                "subnet_id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/virtualNetworks/ktf-network/subnets/ktf-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D4-FC-19",
            "name": "ktf-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "ktf-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Compute/virtualMachines/ktf-vm"
          },
          "dependencies": [
            "azurerm_public_ip.ktf-ip",
            "azurerm_resource_group.ktf-rg",
            "azurerm_subnet.ktf-subnet",
            "azurerm_virtual_network.ktf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ktf-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/networkSecurityGroups/ktf-sg",
            "location": "eastus",
            "name": "ktf-sg",
            "resource_group_name": "ktf-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ktf-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ktf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ktf-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/networkSecurityGroups/ktf-sg/securityRules/ktf-dev-rule",
            "name": "ktf-dev-rule",
            "network_security_group_name": "ktf-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "ktf-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ktf-sg",
            "azurerm_resource_group.ktf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ktf-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/publicIPAddresses/ktf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.234.12",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ktf-ip",
            "resource_group_name": "ktf-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ktf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ktf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/virtualNetworks/ktf-network/subnets/ktf-subnet",
            "name": "ktf-subnet",
            "resource_group_name": "ktf-resources",
            "virtual_network_name": "ktf-network"
          },
          "dependencies": [
            "azurerm_resource_group.ktf-rg",
            "azurerm_virtual_network.ktf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ktf-dev-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/virtualNetworks/ktf-network/subnets/ktf-subnet",
            "network_security_group_id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/networkSecurityGroups/ktf-sg",
            "subnet_id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/virtualNetworks/ktf-network/subnets/ktf-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ktf-sg",
            "azurerm_resource_group.ktf-rg",
            "azurerm_subnet.ktf-subnet",
            "azurerm_virtual_network.ktf-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ktf-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cd59ea50-4f85-4f7e-8bd1-4c23e844bc3e",
            "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/virtualNetworks/ktf-network",
            "location": "eastus",
            "name": "ktf-network",
            "resource_group_name": "ktf-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/virtualNetworks/ktf-network/subnets/ktf-subnet",
                "name": "ktf-subnet",
                "security_group": "/subscriptions/794484ea-9b23-4bb9-93b1-f40f1bf8aee9/resourceGroups/ktf-resources/providers/Microsoft.Network/networkSecurityGroups/ktf-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ktf-rg"
          ]
        }
      ]
    }
  ]
}